[package]
name = "clap-config-file"
version = "0.3.2"
edition = "2021"
description = "A proc macro for adding config file support to clap"
license = "MIT"
repository = "https://github.com/bodo-run/clap-config-file"
documentation = "https://docs.rs/clap-config-file"
readme = "README.md"
keywords = ["clap", "config", "macro", "cli", "args"]
categories = ["command-line-utilities", "config"]

[lib]
proc-macro = true

[dependencies]
clap = { version = "4.2", features = ["derive"] }
config = "0.13"
serde = { version="1.0", features=["derive"] }
quote = "1.0"
syn = { version="2.0", features=["full","parsing","extra-traits"] }
proc-macro2 = "1.0"
heck = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.8"
predicates = "3.0"

[features]
build-binary = []

[workspace]
members = [
    "examples/basic",
    "examples/advanced"
]

[[example]]
name = "basic"
path = "examples/basic/src/main.rs"

[[example]]
name = "advanced"
path = "examples/advanced/src/main.rs"

