[package]
name = "basic"
version = "0.2.0"
edition = "2021"

[dependencies]
clap-config-file = { path = "../.." }
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "basic"
path = "src/main.rs"